--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -4937,7 +4937,7 @@
   "playWithAI": "Παίξτε με την Τεχνητή Νοημοσύνη προς το παρόν",
   "courseStartDesc": "Ο Pangea Bot είναι έτοιμος να ξεκινήσει οποιαδήποτε στιγμή!\n\n...αλλά η μάθηση είναι καλύτερη με φίλους!",
   "@@locale": "el",
-  "@@last_modified": "2025-12-01 12:41:00.324485",
+  "@@last_modified": "2025-12-12 14:56:59.182419",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12843,7 +12843,7 @@
   "joinCourseWithCode": "Συνδεθείτε με κωδικό μαθήματος",
   "joinPublicCourse": "Συνδεθείτε σε δημόσιο μάθημα",
   "vocabLevelsDesc": "Εδώ θα προστεθούν οι λέξεις λεξιλογίου μόλις τις αναβαθμίσετε!",
-  "highlightVocabTooltip": "Επισημάνετε τις στόχους λέξεις λεξιλογίου παρακάτω στέλνοντάς τες ή εξασκώντας με αυτές στη συνομιλία",
+  "highlightVocabTooltip": "Επισημάνετε τις λέξεις-στόχους παρακάτω στέλνοντάς τες ή εξασκώντας τες στη συνομιλία",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12892,17 +12892,12 @@
   },
   "failedToLoadFeedback": "Αποτυχία φόρτωσης ανατροφοδότησης.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Επισημάνετε τις λέξεις-στόχους παρακάτω στέλνοντάς τες ή εξασκώντας τες στη συνομιλία",
   "noSavedActivitiesYet": "Οι δραστηριότητες θα εμφανιστούν εδώ μόλις ολοκληρωθούν και αποθηκευτούν.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12942,6 +12937,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Ανοιχτές συνεδρίες ({num})",
+  "inProgressActivitiesTitle": "Γίνεται τώρα ({num})",
+  "completedActivitiesTitle": "Ολοκληρώθηκε ({num})",
+  "inOngoingActivity": "Έχετε μια τρέχουσα δραστηριότητα!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
