--- a/lib/l10n/intl_pt_PT.arb
+++ b/lib/l10n/intl_pt_PT.arb
@@ -3816,7 +3816,7 @@
   "selectAll": "Selecionar tudo",
   "deselectAll": "Desmarcar tudo",
   "@@locale": "pt_PT",
-  "@@last_modified": "2025-12-01 12:40:21.887443",
+  "@@last_modified": "2025-12-12 14:56:24.160772",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12814,7 +12814,7 @@
   "joinCourseWithCode": "Entrar no curso com código",
   "joinPublicCourse": "Entrar no curso público",
   "vocabLevelsDesc": "É aqui que as palavras de vocabulário irão aparecer assim que as tiveres evoluído!",
-  "highlightVocabTooltip": "Destaque as palavras de vocabulário alvo abaixo, enviando-as ou praticando com elas no chat",
+  "highlightVocabTooltip": "Destaque as palavras de vocabulário-alvo abaixo enviando-as ou praticando com elas no chat",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12863,17 +12863,12 @@
   },
   "failedToLoadFeedback": "Falha ao carregar feedback.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Destaque as palavras de vocabulário-alvo abaixo enviando-as ou praticando com elas no chat",
   "noSavedActivitiesYet": "As atividades aparecerão aqui assim que forem concluídas e salvas.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12913,6 +12908,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Sessões abertas ({num})",
+  "inProgressActivitiesTitle": "Acontecendo agora ({num})",
+  "completedActivitiesTitle": "Concluído ({num})",
+  "inOngoingActivity": "Você tem uma atividade em andamento!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
