--- a/lib/l10n/intl_ta.arb
+++ b/lib/l10n/intl_ta.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:40:43.100129",
+  "@@last_modified": "2025-12-12 14:56:42.385850",
   "acceptedTheInvitation": "👍 {username} அழைப்பை ஏற்றுக்கொண்டது",
   "@acceptedTheInvitation": {
     "type": "String",
@@ -12009,7 +12009,7 @@
   "joinCourseWithCode": "குறியீடு கொண்டு பாடத்தில் சேரவும்",
   "joinPublicCourse": "பொது பாடத்தில் சேரவும்",
   "vocabLevelsDesc": "நீங்கள் அவற்றை மேம்படுத்தியபின் சொற்பொருள் வார்த்தைகள் இங்கே செல்லும்!",
-  "highlightVocabTooltip": "சொற்பொருள் வார்த்தைகளை கீழே ஹைலைட் செய்ய, அவற்றை அனுப்பவும் அல்லது சாட்டில் பயிற்சி செய்யவும்",
+  "highlightVocabTooltip": "சாட் மூலம் அனுப்புவதன் மூலம் அல்லது அவற்றுடன் பயிற்சி செய்வதன் மூலம் கீழே உள்ள இலக்கு சொற்களை வண்ணமயமாக்கவும்",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12058,17 +12058,12 @@
   },
   "failedToLoadFeedback": "பின்னூட்டத்தை ஏற்ற முடியவில்லை.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "சாட் மூலம் அனுப்புவதன் மூலம் அல்லது அவற்றுடன் பயிற்சி செய்வதன் மூலம் கீழே உள்ள இலக்கு சொற்களை வண்ணமயமாக்கவும்",
   "noSavedActivitiesYet": "செயல்பாடுகள் முடிக்கப்பட்டு சேமிக்கப்பட்ட பிறகு இங்கே தோன்றும்.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12108,6 +12103,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "திறந்த அமர்வுகள் ({num})",
+  "inProgressActivitiesTitle": "இப்போது நடைபெற்று வருகிறது ({num})",
+  "completedActivitiesTitle": "முடிந்தது ({num})",
+  "inOngoingActivity": "உங்களுக்கு ஒரு தொடர்ந்த செயல்பாடு உள்ளது!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
