--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -4937,7 +4937,7 @@
   "playWithAI": "เล่นกับ AI ชั่วคราว",
   "courseStartDesc": "Pangea Bot พร้อมที่จะเริ่มต้นได้ทุกเมื่อ!\n\n...แต่การเรียนรู้ดีกว่ากับเพื่อน!",
   "@@locale": "th",
-  "@@last_modified": "2025-12-01 12:40:19.963556",
+  "@@last_modified": "2025-12-12 14:56:22.826920",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12843,7 +12843,7 @@
   "joinCourseWithCode": "เข้าร่วมหลักสูตรด้วยรหัส",
   "joinPublicCourse": "เข้าร่วมหลักสูตรสาธารณะ",
   "vocabLevelsDesc": "นี่คือที่ที่คำศัพท์จะไปเมื่อคุณเลเวลอัปมันแล้ว!",
-  "highlightVocabTooltip": "เน้นคำศัพท์เป้าหมายด้านล่างโดยส่งหรือฝึกฝนกับมันในแชท",
+  "highlightVocabTooltip": "เน้นคำศัพท์เป้าหมายด้านล่างโดยการส่งหรือฝึกฝนกับพวกเขาในแชท",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12892,17 +12892,12 @@
   },
   "failedToLoadFeedback": "ไม่สามารถโหลดข้อเสนอแนะได้",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "เน้นคำศัพท์เป้าหมายด้านล่างโดยการส่งหรือฝึกฝนกับพวกเขาในแชท",
   "noSavedActivitiesYet": "กิจกรรมจะปรากฏที่นี่เมื่อเสร็จสิ้นและบันทึกแล้ว",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12942,6 +12937,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "เปิดเซสชัน ({num})",
+  "inProgressActivitiesTitle": "กำลังดำเนินการอยู่ ({num})",
+  "completedActivitiesTitle": "เสร็จสิ้น ({num})",
+  "inOngoingActivity": "คุณมีการดำเนินการที่กำลังเกิดขึ้น!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
