--- a/lib/l10n/intl_be.arb
+++ b/lib/l10n/intl_be.arb
@@ -2392,7 +2392,7 @@
   "playWithAI": "Пакуль гуляйце з ШІ",
   "courseStartDesc": "Pangea Bot гатовы да працы ў любы час!\n\n...але навучанне лепш з сябрамі!",
   "@@locale": "be",
-  "@@last_modified": "2025-12-01 12:40:15.499665",
+  "@@last_modified": "2025-12-12 14:56:19.028442",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12884,7 +12884,7 @@
   "joinCourseWithCode": "Далучыцца да курса з кодам",
   "joinPublicCourse": "Далучыцца да публічнага курса",
   "vocabLevelsDesc": "Тут будуць размяшчацца словы слоўніка, калі вы іх узнясеце ўзровень!",
-  "highlightVocabTooltip": "Выдзяліце мэтавыя словы слоўніка ніжэй, адпраўляючы іх або практыкуючыся з імі ў чаце",
+  "highlightVocabTooltip": "Выдзяліце мэтавыя словы ніжэй, адпраўляючы іх або практыкуючы з імі ў чаце",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12933,17 +12933,12 @@
   },
   "failedToLoadFeedback": "Не ўдалося загрузіць водгук.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Выдзяліце мэтавыя словы ніжэй, адпраўляючы іх або практыкуючы з імі ў чаце",
   "noSavedActivitiesYet": "Дзеянні з'явяцца тут, як толькі яны будуць завершаны і захаваны.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12983,6 +12978,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Адкрытыя сесіі ({num})",
+  "inProgressActivitiesTitle": "Ідзе зараз ({num})",
+  "completedActivitiesTitle": "Завершана ({num})",
+  "inOngoingActivity": "У вас ёсць бягучая актыўнасць!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
