--- a/lib/l10n/intl_ca.arb
+++ b/lib/l10n/intl_ca.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:40:17.930439",
+  "@@last_modified": "2025-12-12 14:56:20.853227",
   "about": "Quant a",
   "@about": {
     "type": "String",
@@ -11809,7 +11809,7 @@
   "joinCourseWithCode": "Uneix-te al curs amb un codi",
   "joinPublicCourse": "Uneix-te al curs públic",
   "vocabLevelsDesc": "Aquí és on aniran les paraules de vocabulari un cop les hagis pujat de nivell!",
-  "highlightVocabTooltip": "Destaca les paraules de vocabulari objectiu a continuació enviant-les o practicant amb elles al xat",
+  "highlightVocabTooltip": "Destaca les paraules de vocabulari objectiu a continuació enviant-les o practicant-les al xat",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -11858,17 +11858,12 @@
   },
   "failedToLoadFeedback": "No s'ha pogut carregar el feedback.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Destaca les paraules de vocabulari objectiu a continuació enviant-les o practicant-les al xat",
   "noSavedActivitiesYet": "Les activitats apareixeran aquí un cop estiguin completades i desades.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -11908,6 +11903,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Sessions obertes ({num})",
+  "inProgressActivitiesTitle": "Succeint ara ({num})",
+  "completedActivitiesTitle": "Fet ({num})",
+  "inOngoingActivity": "Tens una activitat en curs!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
