--- a/lib/l10n/intl_da.arb
+++ b/lib/l10n/intl_da.arb
@@ -2411,7 +2411,7 @@
   "playWithAI": "Leg med AI for nu",
   "courseStartDesc": "Pangea Bot er klar til at starte når som helst!\n\n...men læring er bedre med venner!",
   "@@locale": "da",
-  "@@last_modified": "2025-12-01 12:39:32.959549",
+  "@@last_modified": "2025-12-12 14:55:40.954552",
   "@aboutHomeserver": {
     "type": "String",
     "placeholders": {
@@ -12896,17 +12896,12 @@
   },
   "failedToLoadFeedback": "Kunne ikke indlæse feedback.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Fremhæv målordene nedenfor ved at sende dem eller øve med dem i chatten",
   "noSavedActivitiesYet": "Aktiviteter vil vises her, når de er afsluttet og gemt.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12946,6 +12941,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Åbne sessioner ({num})",
+  "inProgressActivitiesTitle": "Foregår nu ({num})",
+  "completedActivitiesTitle": "Færdig ({num})",
+  "inOngoingActivity": "Du har en igangværende aktivitet!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
