--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:40:53.664453",
+  "@@last_modified": "2025-12-12 14:56:51.600012",
   "repeatPassword": "تکرار رمزعبور",
   "@repeatPassword": {},
   "about": "درباره",
@@ -12517,7 +12517,7 @@
   "joinCourseWithCode": "پیوستن به دوره با کد",
   "joinPublicCourse": "پیوستن به دوره عمومی",
   "vocabLevelsDesc": "اینجا جایی است که کلمات واژگان پس از ارتقاء سطح قرار می‌گیرند!",
-  "highlightVocabTooltip": "کلمات واژگان هدف را در زیر با ارسال یا تمرین در چت برجسته کنید",
+  "highlightVocabTooltip": "کلمات هدف را در زیر با ارسال یا تمرین کردن آنها در چت هایلایت کنید",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12566,17 +12566,12 @@
   },
   "failedToLoadFeedback": "بارگذاری بازخورد ناموفق بود.",
   "unreadPlus": "۹۹+",
-  "highlightVocabTooltip": "کلمات هدف را در زیر با ارسال یا تمرین کردن آنها در چت هایلایت کنید",
   "noSavedActivitiesYet": "فعالیت‌ها پس از اتمام و ذخیره‌سازی در اینجا ظاهر خواهند شد.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12616,6 +12611,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "جلسات باز ({num})",
+  "inProgressActivitiesTitle": "در حال حاضر ({num})",
+  "completedActivitiesTitle": "انجام شده ({num})",
+  "inOngoingActivity": "شما یک فعالیت در حال انجام دارید!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
