--- a/lib/l10n/intl_hr.arb
+++ b/lib/l10n/intl_hr.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "hr",
-  "@@last_modified": "2025-12-01 12:39:46.878014",
+  "@@last_modified": "2025-12-12 14:55:54.655811",
   "about": "Informacije",
   "@about": {
     "type": "String",
@@ -12157,7 +12157,7 @@
   "joinCourseWithCode": "Pridruži se tečaju s kodom",
   "joinPublicCourse": "Pridruži se javnom tečaju",
   "vocabLevelsDesc": "Ovdje će ići riječi vokabulara nakon što ih podignete na višu razinu!",
-  "highlightVocabTooltip": "Istakni ciljne riječi vokabulara ispod tako što ćeš ih poslati ili vježbati s njima u chatu",
+  "highlightVocabTooltip": "Istaknite ciljne riječi ispod tako da ih pošaljete ili vježbate s njima u chatu",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12206,17 +12206,12 @@
   },
   "failedToLoadFeedback": "Nije moguće učitati povratne informacije.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Istaknite ciljne riječi ispod tako da ih pošaljete ili vježbate s njima u chatu",
   "noSavedActivitiesYet": "Aktivnosti će se ovdje pojaviti kada budu dovršene i spremljene.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12256,6 +12251,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Otvorene sesije ({num})",
+  "inProgressActivitiesTitle": "Trenutno se događa ({num})",
+  "completedActivitiesTitle": "Završeno ({num})",
+  "inOngoingActivity": "Imate aktivnost koja traje!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
