--- a/lib/l10n/intl_id.arb
+++ b/lib/l10n/intl_id.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:39:37.053489",
+  "@@last_modified": "2025-12-12 14:55:45.570582",
   "setAsCanonicalAlias": "Atur sebagai alias utama",
   "@setAsCanonicalAlias": {
     "type": "String",
@@ -11776,7 +11776,7 @@
   "joinCourseWithCode": "Gabung kursus dengan kode",
   "joinPublicCourse": "Gabung kursus publik",
   "vocabLevelsDesc": "Di sinilah kata-kata kosakata akan ditempatkan setelah Anda meningkatkannya!",
-  "highlightVocabTooltip": "Sorot kata kosakata target di bawah dengan mengirimkannya atau berlatih dengannya di obrolan",
+  "highlightVocabTooltip": "Sorot kata-kata kosakata target di bawah ini dengan mengirimkannya atau berlatih dengan mereka di obrolan",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -11825,17 +11825,12 @@
   },
   "failedToLoadFeedback": "Gagal memuat umpan balik.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Sorot kata-kata kosakata target di bawah ini dengan mengirimkannya atau berlatih dengan mereka di obrolan",
   "noSavedActivitiesYet": "Kegiatan akan muncul di sini setelah mereka diselesaikan dan disimpan.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -11875,6 +11870,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Sesi terbuka ({num})",
+  "inProgressActivitiesTitle": "Sedang berlangsung ({num})",
+  "completedActivitiesTitle": "Selesai ({num})",
+  "inOngoingActivity": "Anda memiliki aktivitas yang sedang berlangsung!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
