--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ja",
-  "@@last_modified": "2025-12-01 12:41:02.154964",
+  "@@last_modified": "2025-12-12 14:57:02.463257",
   "about": "このアプリについて",
   "@about": {
     "type": "String",
@@ -12575,7 +12575,7 @@
   "joinCourseWithCode": "コードでコースに参加",
   "joinPublicCourse": "公開コースに参加",
   "vocabLevelsDesc": "これが語彙をレベルアップしたら表示される場所です！",
-  "highlightVocabTooltip": "チャットで送信したり練習したりして、ターゲット語彙をハイライトしてください",
+  "highlightVocabTooltip": "チャットで送信したり練習したりすることで、下のターゲット語彙をハイライトします。",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12624,17 +12624,12 @@
   },
   "failedToLoadFeedback": "フィードバックの読み込みに失敗しました。",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "チャットで送信したり練習したりすることで、下のターゲット語彙をハイライトします。",
   "noSavedActivitiesYet": "アクティビティは、完了して保存されるとここに表示されます。",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12674,6 +12669,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "オープンセッション ({num})",
+  "inProgressActivitiesTitle": "現在進行中 ({num})",
+  "completedActivitiesTitle": "完了 ({num})",
+  "inOngoingActivity": "進行中のアクティビティがあります！",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
