--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:40:12.703108",
+  "@@last_modified": "2025-12-12 14:56:17.485955",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -12878,7 +12878,7 @@
   "joinCourseWithCode": "Bli med på kurs med kode",
   "joinPublicCourse": "Bli med på offentlig kurs",
   "vocabLevelsDesc": "Dette er hvor vokabularord vil komme når du har nivåert dem opp!",
-  "highlightVocabTooltip": "Uthev målordene nedenfor ved å sende dem eller øve med dem i chatten",
+  "highlightVocabTooltip": "Fremhev målordene nedenfor ved å sende dem eller øve med dem i chatten",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12927,17 +12927,12 @@
   },
   "failedToLoadFeedback": "Kunne ikke laste tilbakemelding.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Fremhev målordene nedenfor ved å sende dem eller øve med dem i chatten",
   "noSavedActivitiesYet": "Aktiviteter vil vises her når de er fullført og lagret.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12977,6 +12972,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Åpne økter ({num})",
+  "inProgressActivitiesTitle": "Pågår nå ({num})",
+  "completedActivitiesTitle": "Ferdig ({num})",
+  "inOngoingActivity": "Du har en pågående aktivitet!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
