--- a/lib/l10n/intl_sr.arb
+++ b/lib/l10n/intl_sr.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:41:13.018500",
+  "@@last_modified": "2025-12-12 14:57:11.168077",
   "about": "О програму",
   "@about": {
     "type": "String",
@@ -12887,7 +12887,7 @@
   "joinCourseWithCode": "Pridruži se kursu sa kodom",
   "joinPublicCourse": "Pridruži se javnom kursu",
   "vocabLevelsDesc": "Ovde će ići reči vokabulara nakon što ih podignete na viši nivo!",
-  "highlightVocabTooltip": "Istakni ciljne reči vokabulara ispod tako što ćeš ih poslati ili vežbati sa njima u chatu",
+  "highlightVocabTooltip": "Istaknite ciljne reči rečnika ispod tako što ćete ih poslati ili vežbati u čatu",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12936,17 +12936,12 @@
   },
   "failedToLoadFeedback": "Nije uspelo učitavanje povratnih informacija.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Istaknite ciljne reči rečnika ispod tako što ćete ih poslati ili vežbati u čatu",
   "noSavedActivitiesYet": "Aktivnosti će se ovde pojaviti kada budu završene i sačuvane.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12986,6 +12981,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Otvorene sesije ({num})",
+  "inProgressActivitiesTitle": "Dešava se sada ({num})",
+  "completedActivitiesTitle": "Završeno ({num})",
+  "inOngoingActivity": "Imate aktivnost u toku!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
