--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:40:57.541160",
+  "@@last_modified": "2025-12-12 14:56:57.524563",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -12263,7 +12263,7 @@
   "joinCourseWithCode": "Gå med i kurs med kod",
   "joinPublicCourse": "Gå med i offentlig kurs",
   "vocabLevelsDesc": "Det här är platsen där vokabulärord kommer att hamna när du har nivåer upp dem!",
-  "highlightVocabTooltip": "Markera målord i vokabulär nedan genom att skicka dem eller öva med dem i chatten",
+  "highlightVocabTooltip": "Markera målvokabulärord nedan genom att skicka dem eller öva med dem i chatten",
   "@startOwn": {
     "type": "String",
     "placeholders": {}
@@ -12312,17 +12312,12 @@
   },
   "failedToLoadFeedback": "Misslyckades med att ladda feedback.",
   "unreadPlus": "99+",
-  "highlightVocabTooltip": "Markera målvokabulärord nedan genom att skicka dem eller öva med dem i chatten",
   "noSavedActivitiesYet": "Aktiviteter kommer att visas här när de är slutförda och sparade.",
   "@failedToLoadFeedback": {
     "type": "String",
     "placeholders": {}
   },
   "@unreadPlus": {
-    "type": "String",
-    "placeholders": {}
-  },
-  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   },
@@ -12362,6 +12357,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Öppna sessioner ({num})",
+  "inProgressActivitiesTitle": "Pågår nu ({num})",
+  "completedActivitiesTitle": "Avklarad ({num})",
+  "inOngoingActivity": "Du har en pågående aktivitet!",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inOngoingActivity": {
     "type": "String",
     "placeholders": {}
   }
